--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Tkinter-examples
-这里记录了JermyLu使用Tkinter库写的各种简单GUI设计！
-有：超级超级简单的文本加密工具
+周末闲来无聊，使用Tkinter库写了几个简单的GUI！
+超级超级简单的文本加密工具
 https://github.com/JermyLu/Tkinter-examples/blob/master/img/secret.PNG
 超级超级简单的文件搜索工具
 https://github.com/JermyLu/Tkinter-examples/blob/master/img/search-1.PNG
